objects/ASI_CRM_Route_Rule_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Route_Rule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Route_Rule_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approval_Sequence__c</fullName>
        <label>Approval Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Line Manager</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Lowest_Threshold__c</fullName>
        <label>MAX Threshold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. (&lt;= MAX 1)</fullName>
                </value>
                <value>
                    <fullName>2. (&gt; MAX 1 &amp; &lt;= MAX 2)</fullName>
                </value>
                <value>
                    <fullName>3. (&gt; MAX 2)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Marketing_FOC_Mapping__c</fullName>
        <label>Marketing FOC Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASI_CRM_Whisky__c</fullName>
                    <label>Whisky / CDP / Spirit</label>
                </value>
                <value>
                    <fullName>ASI_CRM_Champagne__c</fullName>
                    <label>MM / Wines</label>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_PJ_Martell__c</fullName>
                    <label>PJ / Martell</label>
                </value>
                <value>
                    <fullName>ASI_CRM_JP_Trade_Marketing__c</fullName>
                    <label>Trade Marketing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Route_Type__c</fullName>
        <label>Route Type</label>
        <referenceTo>ASI_CRM_Route_Type__c</referenceTo>
        <relationshipLabel>ASI CRM Route Rule Details</relationshipLabel>
        <relationshipName>ASI_CRM_Route_Rule_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Threshold__c</fullName>
        <label>Amount Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ASI CRM Route Rule Detail</label>
    <nameField>
        <displayFormat>RRID{000000}</displayFormat>
        <label>Route Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI CRM Route Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>